update files - index.html main.js manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
 	"short_name": "cls",
 	"start_url": ".",
 	"display": "standalone",
-	"theme_color": 	"#00BCD4",
+	"theme_color": 	"#0099FF",
 	"background_color": "#fff",
-	"dir": "ltr",
-	"lang": "en-US",
-	"description": "Circale Post website",
+	"dir": "rtl",
+	"lang": "ar-DZ",
+	"description": "Circale WebDev team training website",
 	"icons": [{
 		"src": "#",
 		"sizes": "48x48",
