--- a/manifest.json
+++ b/manifest.json
@@ -9,38 +9,34 @@
 	"lang": "ar-DZ",
 	"description": "Circale WebDev team training website",
 	"icons": [{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "48x48",
 		"type": "image/png"
 		},
 		{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "72x72",
 		"type": "image/png"
 		}, 
 		{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "96x96",
 		"type": "image/png"
 		}, 
 		{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "144x144",
 		"type": "image/png"
 		}, 
 		{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "168x168",
 		"type": "image/png"
 		}, 
 		{
-		"src": "#",
+		"src": "static/logo-circale.png",
 		"sizes": "192x192",
 		"type": "image/png"
-		},
-		{
-		"src": "#",
-		"sizes": "512x512",
-		"type": "image/png"
-	}]	
+		}
+	]	
 }
