--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,10 @@
 		"src": "static/logo-circale.png",
 		"sizes": "192x192",
 		"type": "image/png"
-		}
-	]	
+		},
+		{
+		"src": "static/logo-circale.png",
+		"sizes": "512x512",
+		"type": "image/png"
+	}]	
 }
